@@ -1,4 +1,12 @@
-﻿zg 26.04.2016 03:41:23 +0200 - build 4639
+﻿zg 26.04.2016 16:23:31 +0200 - build 4640
+
+1. в диалоге копирования была возможность выбрать "Also ask on R/O files".
+
+2. уточнение посылки DN_INPUT/DN_CONTROLINPUT для открытого комбобокса.
+
+3. убрано странное поведение по восстановлению старой позиции в списке, если DN_LISTHOTKEY обработан.
+
+zg 26.04.2016 03:41:23 +0200 - build 4639
 
 1. убран неиспользуемый код.
 
